# Aegis

./: .env-template  Cargo.toml  README.md  cargo.toml
src/: main.rs  parser.rs
