[package]
name = "Aegis"
version = "0.1.0"
edition = "2021"
description = "Anti-Phishing Sentinel using IMAP IDLE"

[dependencies]
imap = "2.4"
native-tls = "0.2"
mailparse = "0.14"
url = "2.4"
strsim = "0.10"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.10"
dotenv = "0.15"
anyhow = "1.0"
